--- a/package.json
+++ b/package.json
@@ -1,176 +1,20 @@
 {
-  "devDependencies": {
-    "cypress": "^9.5.0"
-  },
   "name": "cypressmagentoapidemo",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
-  "dependencies": {
-    "aggregate-error": "^3.1.0",
-    "ansi-escapes": "^4.3.2",
-    "ansi-regex": "^5.0.1",
-    "ansi-colors": "^4.1.1",
-    "ansi-styles": "^4.3.0",
-    "arch": "^2.2.0",
-    "assert-plus": "^1.0.0",
-    "asn1": "^0.2.6",
-    "async": "^3.2.3",
-    "aws-sign2": "^0.7.0",
-    "aws4": "^1.11.0",
-    "astral-regex": "^2.0.0",
-    "balanced-match": "^1.0.2",
-    "at-least-node": "^1.0.0",
-    "blob-util": "^2.0.2",
-    "base64-js": "^1.5.1",
-    "buffer": "^5.7.1",
-    "bcrypt-pbkdf": "^1.0.2",
-    "buffer-crc32": "^0.2.13",
-    "cachedir": "^2.3.0",
-    "brace-expansion": "^1.1.11",
-    "caseless": "^0.12.0",
-    "chalk": "^4.1.2",
-    "check-more-types": "^2.24.0",
-    "clean-stack": "^2.2.0",
-    "cli-cursor": "^3.1.0",
-    "cli-table3": "^0.6.1",
-    "ci-info": "^3.3.0",
-    "cli-truncate": "^2.1.0",
-    "color-convert": "^2.0.1",
-    "colorette": "^2.0.16",
-    "colors": "^1.4.0",
-    "color-name": "^1.1.4",
-    "combined-stream": "^1.0.8",
-    "commander": "^5.1.0",
-    "core-util-is": "^1.0.2",
-    "common-tags": "^1.8.2",
-    "concat-map": "^0.0.1",
-    "cross-spawn": "^7.0.3",
-    "dashdash": "^1.14.1",
-    "bluebird": "^3.7.2",
-    "dayjs": "^1.10.7",
-    "delayed-stream": "^1.0.0",
-    "ecc-jsbn": "^0.1.2",
-    "emoji-regex": "^8.0.0",
-    "end-of-stream": "^1.4.4",
-    "escape-string-regexp": "^1.0.5",
-    "debug": "^4.3.3",
-    "enquirer": "^2.3.6",
-    "eventemitter2": "^6.4.5",
-    "extend": "^3.0.2",
-    "execa": "^4.1.0",
-    "extsprintf": "^1.3.0",
-    "fd-slicer": "^1.1.0",
-    "extract-zip": "^2.0.1",
-    "forever-agent": "^0.6.1",
-    "figures": "^3.2.0",
-    "fs.realpath": "^1.0.0",
-    "executable": "^4.1.1",
-    "form-data": "^2.3.3",
-    "fs-extra": "^9.1.0",
-    "get-stream": "^5.2.0",
-    "getpass": "^0.1.7",
-    "getos": "^3.2.1",
-    "has-flag": "^4.0.0",
-    "global-dirs": "^3.0.0",
-    "glob": "^7.2.0",
-    "graceful-fs": "^4.2.9",
-    "http-signature": "^1.3.6",
-    "ieee754": "^1.2.1",
-    "indent-string": "^4.0.0",
-    "inflight": "^1.0.6",
-    "inherits": "^2.0.4",
-    "is-fullwidth-code-point": "^3.0.0",
-    "human-signals": "^1.1.1",
-    "ini": "^2.0.0",
-    "is-path-inside": "^3.0.3",
-    "is-ci": "^3.0.1",
-    "is-installed-globally": "^0.4.0",
-    "is-stream": "^2.0.1",
-    "isexe": "^2.0.0",
-    "is-unicode-supported": "^0.1.0",
-    "is-typedarray": "^1.0.0",
-    "jsbn": "^0.1.1",
-    "isstream": "^0.1.2",
-    "json-stringify-safe": "^5.0.1",
-    "jsprim": "^2.0.2",
-    "lazy-ass": "^1.6.0",
-    "json-schema": "^0.4.0",
-    "jsonfile": "^6.1.0",
-    "lodash": "^4.17.21",
-    "listr2": "^3.14.0",
-    "lodash.once": "^4.1.1",
-    "log-update": "^4.0.0",
-    "log-symbols": "^4.1.0",
-    "lru-cache": "^6.0.0",
-    "merge-stream": "^2.0.0",
-    "mime-types": "^2.1.34",
-    "mimic-fn": "^2.1.0",
-    "minimatch": "^3.1.2",
-    "mime-db": "^1.51.0",
-    "ms": "^2.1.2",
-    "npm-run-path": "^4.0.1",
-    "onetime": "^5.1.2",
-    "once": "^1.4.0",
-    "ospath": "^1.2.2",
-    "p-map": "^4.0.0",
-    "minimist": "^1.2.5",
-    "path-key": "^3.1.1",
-    "pend": "^1.2.0",
-    "path-is-absolute": "^1.0.1",
-    "pify": "^2.3.0",
-    "proxy-from-env": "^1.0.0",
-    "performance-now": "^2.1.0",
-    "punycode": "^2.1.1",
-    "pump": "^3.0.0",
-    "pretty-bytes": "^5.6.0",
-    "psl": "^1.8.0",
-    "request-progress": "^3.0.0",
-    "qs": "^6.5.3",
-    "restore-cursor": "^3.1.0",
-    "rimraf": "^3.0.2",
-    "rfdc": "^1.3.0",
-    "safe-buffer": "^5.2.1",
-    "rxjs": "^7.5.4",
-    "safer-buffer": "^2.1.2",
-    "shebang-regex": "^3.0.0",
-    "slice-ansi": "^3.0.0",
-    "semver": "^7.3.5",
-    "shebang-command": "^2.0.0",
-    "string-width": "^4.2.3",
-    "signal-exit": "^3.0.7",
-    "sshpk": "^1.17.0",
-    "strip-ansi": "^6.0.1",
-    "throttleit": "^1.0.0",
-    "strip-final-newline": "^2.0.0",
-    "supports-color": "^8.1.1",
-    "tough-cookie": "^2.5.0",
-    "tunnel-agent": "^0.6.0",
-    "through": "^2.3.8",
-    "tweetnacl": "^0.14.5",
-    "tmp": "^0.2.1",
-    "universalify": "^2.0.0",
-    "untildify": "^4.0.0",
-    "type-fest": "^0.21.3",
-    "uuid": "^8.3.2",
-    "which": "^2.0.2",
-    "tslib": "^2.3.1",
-    "verror": "^1.10.0",
-    "wrappy": "^1.0.2",
-    "yauzl": "^2.10.0",
-    "asynckit": "^0.4.0",
-    "yallist": "^4.0.0",
-    "wrap-ansi": "^7.0.0"
-  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "cypress:open": "cypress open",
-    "cypress:run": "cypress run",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run",
     "cypress:run-chrome": "cypress run --browser chrome",
     "cypress:run-chrome-head": "cypress run --headed --browser chrome",
     "cypress:run-headed": "cypress run --headed"
-
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "devDependencies": {
+    "cypress": "^9.5.0",
+    "cypress-file-upload": "^5.0.8"
+  }
 }
