--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npm run cy:open || npm run posttest",
+    "test": "npm run clean-allure-result && npm run cy:open && npm run report",
     "cy:open": "cypress open --env allure=true",
     "cy:run": "cypress run --headed --spec 'cypress/integration/1-getting-started/magentoPage.ts' --env allure=true",
     "cypress:run-chrome": "cypress run --browser chrome --env allure=true",
     "cypress:run-chrome-head": "cypress run --headed --browser chrome",
     "cypress:run-headed": "cypress run --headed",
     "allure:report": "allure generate allure-results --clean -o allure-report",
-    "posttest": "npm run allure:report"
+    "posttest": "npm run allure:report",
+    "clean-allure-result": "rm -rf allure-results",
+    "report": "allure generate allure-results --clean && allure open allure-report"
   },
   "author": "",
   "license": "ISC",
