--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npm run clean-allure-result && npm run cy:open && npm run report",
+    "test": "npm run clean-allure-result && npm run cy:run:magento && npm run cy:run:delete && npm run report",
     "cy:open": "cypress open --env allure=true",
-    "cy:run": "cypress run --headed --spec 'cypress/integration/1-getting-started/magentoPage.ts' --env allure=true",
+    "cy:run:magento": "cypress run --headed --spec 'cypress/integration/1-getting-started/magentoPage.js' --env allure=true",
+    "cy:run:delete": "cypress run --headed --spec 'cypress/integration/1-getting-started/deleteSkuFromMagentoPage.js' --env allure=true",
     "cypress:run-chrome": "cypress run --browser chrome --env allure=true",
     "cypress:run-chrome-head": "cypress run --headed --browser chrome",
     "cypress:run-headed": "cypress run --headed",
