converted to typescript and further modification on fetching sku

--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npm run clean-allure-result && npm run cy:run:magento && npm run cy:run:delete && npm run report",
+    "test": "npm run clean-allure-result && npm run cy:run:magento && npm run cy:run:product && npm run cy:run:api && npm run cy:run:delete && npm run report",
     "cy:open": "cypress open --env allure=true",
-    "cy:run:magento": "cypress run --headed --spec 'cypress/integration/1-getting-started/magentoPage.js' --env allure=true",
-    "cy:run:delete": "cypress run --headed --spec 'cypress/integration/1-getting-started/deleteSkuFromMagentoPage.js' --env allure=true",
+    "cy:run:magento": "cypress run --headed --spec 'cypress/integration/1-getting-started/magentoPage.test.ts' --env allure=true",
+    "cy:run:delete": "cypress run --headed --spec 'cypress/integration/1-getting-started/deleteSkuFromMagentoPage.test.ts' --env allure=true",
+    "cy:run:product": "cypress run --headed --spec 'cypress/integration/1-getting-started/productPage.test.ts' --env allure=true",
+    "cy:run:api": "cypress run --headed --spec 'cypress/integration/1-getting-started/magentoAPI.test.ts' --env allure=true",
     "cypress:run-chrome": "cypress run --browser chrome --env allure=true",
     "cypress:run-chrome-head": "cypress run --headed --browser chrome",
     "cypress:run-headed": "cypress run --headed",
