--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
         
         
       - name: Cypress.io
-        uses: cypress-io/github-action@v2.9.7
+        uses: ./
         with:
           build: npx cypress info
         
